changed back to add function

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -34,7 +34,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Subtract"
+        android:text="Add"
         android:id="@+id/button"
         android:layout_below="@+id/editText2"
         android:layout_alignLeft="@+id/editText2"
